--- a/_posts/2017-01-31-JYP.md
+++ b/_posts/2017-01-31-JYP.md
@@ -11,7 +11,7 @@ language: English
 verticals: [Entertainment]
 ---
 
-<img alt="Logo of JYP Entertainment" src="{{ site.baseurl }}/images/jype/jyp-logo.png" width="338">
+<img alt="Logo of JYP Entertainment" src="{{ site.baseurl }}/images/JYPE/jyp-logo.png" width="338">
 
 ## Customer profile ##
 
@@ -21,7 +21,7 @@ verticals: [Entertainment]
 
 JYP Entertainment has self-developed [fansites](http://fans.jype.com) for celebrities under its own management and is operating those sites using Microsoft Azure. At present, registered users of all fansites are about 260,000; JYP is working on more than 10 groups for artists they support.
 
-<img alt="JYP fansites" src="{{ site.baseurl }}/images/jype/fans-main.png" width="638">
+<img alt="JYP fansites" src="{{ site.baseurl }}/images/JYPE/fans-main.png" width="638">
 
 The JYP IT team consists of one project manager (PM) and two developers. To handle the demands of internal staff and fans, the IT team is committed to improve the features of operational websites and to develop new features if the need arises. Such demands are made more than two or three times per month.
 
@@ -43,7 +43,7 @@ As a result, unnecessary and time-consuming steps caused by manual operations we
 - Deploying developed product automatically to both the test environment and production environment and assuring their integrity
 - Implementing scale-out in the form of templates and configuring target environments that match operating environments when unexpected traffic floods occur
 
-<img alt="JYP fansite architecture" src="{{ site.baseurl }}/images/jype/architecture.png" width="864">
+<img alt="JYP fansite architecture" src="{{ site.baseurl }}/images/JYPE/architecture.png" width="864">
 
 ## Participants ##
 
@@ -60,7 +60,7 @@ As a result, unnecessary and time-consuming steps caused by manual operations we
 
 In terms of development, organizing, and operating the fansites of JYP, the overall state examined through VSM looked like this:
 
-<img alt="JYP fansite VSM" src="{{ site.baseurl }}/images/jype/vsm.png" width="716">
+<img alt="JYP fansite VSM" src="{{ site.baseurl }}/images/JYPE/vsm.png" width="716">
 
 The steps of implementing features, merging with the production environment, and building products were well-organized through Visual Studio and Team Services. However, to test products, developers needed to configure virtual machines (VM) manually to match the production environment. Thus, we automated the process by using an Azure Resource Manager template to automate generating VMs and configuring detail settings.
 
@@ -220,7 +220,7 @@ From the start of development to deployment to operational server, the steps and
 
 By using Team Services, products built by developers can be brought to source servers in the production environment. Configuration for roles is used to differentiate between test environments and production environments.
 
-<img alt="Full workflow" src="{{ site.baseurl }}/images/jype/workflow.png" width="864">
+<img alt="Full workflow" src="{{ site.baseurl }}/images/JYPE/workflow.png" width="864">
 
 The following PowerShell script sets the DSC server.
 
@@ -328,7 +328,7 @@ Set-DSCLocalConfigurationManager localhost -Path .\PullClientConfigNames –Verb
 
 When the build result is deployed to the source server, the MOF file is assigned by using **ConfigurationName** and a new checksum is calculated for it. Thus each server can bring and apply modifications periodically. Moreover, because **ConfigurationMode** is set to "ApplyAndAutoCorrect", any differences between the existing settings and the modified values will be applied as JYP settings.
 
-<img alt="Team Services release management" src="{{ site.baseurl }}/images/jype/vsts.png" width="864">
+<img alt="Team Services release management" src="{{ site.baseurl }}/images/JYPE/vsts.png" width="864">
 
 The following PowerShell script creates the MOF file.
 
