--- a/_posts/2017-01-31-JYP.md
+++ b/_posts/2017-01-31-JYP.md
@@ -60,7 +60,7 @@ As a result, unnecessary and time-consuming steps caused by manual operations we
 
 In terms of development, organizing, and operating the fansites of JYP, the overall state examined through VSM looked like this:
 
-<img alt="JYP fansite VSM" src="{{ site.baseurl }}/images/JYPE/vsm.png" width="716">
+<img alt="JYP fansite VSM" src="{{ site.baseurl }}/images/JYPE/vsm.jpg" width="716">
 
 The steps of implementing features, merging with the production environment, and building products were well-organized through Visual Studio and Team Services. However, to test products, developers needed to configure virtual machines (VM) manually to match the production environment. Thus, we automated the process by using an Azure Resource Manager template to automate generating VMs and configuring detail settings.
 
