--- a/_posts/2017-01-31-JYP.md
+++ b/_posts/2017-01-31-JYP.md
@@ -387,7 +387,7 @@ New-DscChecksum -Path $destination -Force -Verbose
 
 By using PowerShell DSC, repeated tasks for configuring test environments are eliminated and reliable settings are enabled at the same time. This approach prevents both the human errors that developers can make and the problems caused by repetitive work that waste time.
 
-After we completed the DevOps story, the JYP CIO raised another topic outside DevOps. Before the hackfest, JYP used ASP.NET to maintaining session state in IIS. The CIO was concerned that the ASP.NET state server didn't support high availability. And he wanted to use the solution on Windows platforms too.
+After we completed the DevOps story, the JYP CIO raised another topic outside DevOps. Before the hackfest, JYP used ASP.NET to maintain session state in IIS. The CIO was concerned that the ASP.NET state server didn't support high availability. And he wanted to use the solution on Windows platforms too.
 
 Many people think that Redis is supported only on Linux. But Microsoft Open Technologies built a production-ready Windows port of Redis, including 64-bit support, an installer for Azure, NuGet support, Redis Sentinel for high availability, and much more. So we suggested that JYP adopt [Redis on Windows](https://msopentech.com/opentech-projects/redis/). We quickly built Redis on Windows and tested high-availability scenarios.
 
