--- a/_posts/2017-01-31-JYP.md
+++ b/_posts/2017-01-31-JYP.md
@@ -19,7 +19,7 @@ verticals: [Entertainment]
 
 ## Problem areas to be addressed ##
 
-JYP Entertainment has self-developed [fansites](http://fans.jype.com) for celebrities under its own management and is operating those sites using Microsoft Azure. At present, registered users of all fansites are about 260,000; JYP is working on more than 10 groups for artists they support.
+JYP Entertainment has self-developed [fansites](http://fans.jype.com) for celebrities under its own management and is operating those sites using Microsoft Azure. The fansites have hundreds of thousands of registered users; JYP is working on more than 10 groups for artists they support.
 
 <img alt="JYP fansites" src="{{ site.baseurl }}/images/JYPE/fans-main.png" width="638">
 
