--- a/_posts/2017-03-13-Cybercom.md
+++ b/_posts/2017-03-13-Cybercom.md
@@ -61,10 +61,10 @@ The following table summarizes the business benefits of the Smart Helmet solutio
 
 | **Category**               | **KPI**                                                        | **Use case**                                               |
 |----------------------------|----------------------------------------------------------------|----------------------------------------------------------|
-| **Safety**                 | Reduce risk and prevent injury                               | <ul><li>Proper helmet usage monitoring</li><li>Alarm button</li><li>High-risk activities notification</li></ul>                        |
-| **Health**                 | Reduce risk of inability to work                             | <ul><li>Temperature monitoring inside helmet</li><li>Shock/falls events notification</li></ul>                  |
-| **Operation/processes**    | Workforce surveillance and management procedures improvement | <ul><li>Estimated location of site workers</li><li>Ad-hoc access to personnel files</li><li>Real-time events reporting</li><li>Training and work permissions management</li></ul>                    |
-| **Machinery and vehicles** | Reduce amount of accidents involving machinery               | <ul><li>Warning machinery driver about people/workers nearby</li><li>Warning helmet users about accessing danger zone</li></ul>  |
+| **Safety**                 | Reduce risk and prevent injury                               | - Proper helmet usage monitoring<br>- Alarm button<br>- High-risk activities notification                        |
+| **Health**                 | Reduce risk of inability to work                             | - Temperature monitoring inside helmet<br>Shock/falls events notification                  |
+| **Operation/processes**    | Workforce surveillance and management procedures improvement | - Estimated location of site workers<br>- Ad-hoc access to personnel files<br>- Real-time events reporting<br>- Training and work permissions management                    |
+| **Machinery and vehicles** | Reduce amount of accidents involving machinery               | - Warning machinery driver about people/workers nearby<br>- Warning helmet users about accessing danger zone  |
 
 *Architecture of the solution*
 
