--- a/_posts/2017-03-13-Cybercom.md
+++ b/_posts/2017-03-13-Cybercom.md
@@ -61,10 +61,10 @@ The following table summarizes the business benefits of the Smart Helmet solutio
 
 | **Category**               | **KPI**                                                        | **Use case**                                               |
 |----------------------------|----------------------------------------------------------------|----------------------------------------------------------|
-| **Safety**                 | Reduce risk and prevent injury                               | - Proper helmet usage monitoring<br>- Alarm button<br>- High-risk activities notification                        |
-| **Health**                 | Reduce risk of inability to work                             | - Temperature monitoring inside helmet<br>Shock/falls events notification                  |
-| **Operation/processes**    | Workforce surveillance and management procedures improvement | - Estimated location of site workers<br>- Ad-hoc access to personnel files<br>- Real-time events reporting<br>- Training and work permissions management                    |
-| **Machinery and vehicles** | Reduce amount of accidents involving machinery               | - Warning machinery driver about people/workers nearby<br>- Warning helmet users about accessing danger zone  |
+| **Safety**                 | Reduce risk and prevent injury                               | • Proper helmet usage monitoring<br>• Alarm button<br>• High-risk activities notification                        |
+| **Health**                 | Reduce risk of inability to work                             | • Temperature monitoring inside helmet<br>• Shock/falls events notification                  |
+| **Operation/processes**    | Workforce surveillance and management procedures improvement | • Estimated location of site workers<br>• Ad-hoc access to personnel files<br>• Real-time events reporting<br>• Training and work permissions management                    |
+| **Machinery and vehicles** | Reduce amount of accidents involving machinery               | • Warning machinery driver about people/workers nearby<br>• Warning helmet users about accessing danger zone  |
 
 *Architecture of the solution*
 
