--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -1,102 +1,453 @@
 ---
 layout: post
 title:  "Using CaaP to enhance on-site inspection"
-author: "Pedro Dias"
+author: "Pedro Dias, Anders Gill"
 author-link: "#"
 author-image: "../images/powel/pedrodias.jpg"
 date:   2017-03-15
 categories: Bot
 color: "blue"
-excerpt: During a hackfest with Microsoft, Powel implemented an  solution to help technical staff perform hands-free inspection of Electrical installations
+excerpt: During a hackfest with Microsoft, Powel implemented a solution to help technical staff perform hands-free inspection of Electrical grids in Norway.
 language: English
 verticals: [Smart Cities, Environmental, Power]
 ---
-![Powel Logo](../images/Powel/CaaP/powel_logo_regular.png)
 
-## Meet **Andre** the elecrical Engineer assistant
-In this CaaP hackfest, Microsoft teamed up with Powel to hack a brand-new solution **Andre**. We describe the process and results here, including the following 
-technologies:
+## Powel Bot Hack Report – March 2017
+From the 15-17th of March 2017 at Microsoft offices in Lysaker - Norway, Microsoft teamed up with Powel to create a brand-new bot called **André**. The aim of the hackfest was to create a chatbot that could assist field engineers within the space of electrical grids to answer questions and provide valuable information about the current scenario at hand. The solution was built using tools from Microsoft leveraging Chatbots and Conversation as a Platform (CaaP) technologies.
 
+![Field engineer](../images/Powel/CaaP/fieldengineer.jpg)
+
+In this CaaP hackfest, we describe the process and results, including the following key technologies that were used:
 -  [Microsoft Bot Framework](https://dev.botframework.com/)
 -  [Microsoft Cognitive Services](https://www.microsoft.com/cognitive-services)
     - [Language Understanding Intelligent Services (LUIS)](https://www.luis.ai/)
     - [Translation API](https://www.microsoft.com/cognitive-services/en-us/translator-api)
     - [Bing Spell Check API](https://www.microsoft.com/cognitive-services/en-us/bing-spell-check-api)
-- [Xamarin](https://www.xamarin.com/)
+- [Xamarin Forms](https://www.xamarin.com/forms)
 - Text-to-speech
     - [Bing Speech API](https://www.microsoft.com/cognitive-services/en-us/speech-api)
-- [DocumentDb](https://azure.microsoft.com/en-us/services/documentdb/)
 - [GitHub](https://github.com/)
-- etc
+- [Visual Studio Team Services](https://www.visualstudio.com/team-services/)
+- [Visual Studio 2017](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)
 
 Additionally, the team expressed a need for getting more hands-on experience with
 - Test Automation
-- CI/CD scenarios
-- etc
+- Continuous Integration/Continuous Delivery scenarios
 
-The hackfest took place after a couple of initial calls where the problem area was detailed, and 
-ambition for  the hackfest scoped. 
+The hackfest took place after multiple calls where the problem area was demystified, and ambitions for the hackfest was scoped.
 
-## Conversation as a Platform
-During the hackfest, we implemented the following:
-- Xamarin app 
-- Translation
-- etc
-
-## Hackfest members
+## Core Team
 | Company   | Person               |Role                     |
 | -------   | -------------------- | ----------------------- |
-| Powel     | yaya                 |                         |
-|           | yuyu                 |                         |
+| Powel     | Damian Plaza          | Software Engineer         |
+|           | Jakub Hiszczyn         | Software Engineer        |
+|           | Karol Stosik 		   | Software Engineer        |
+|           | Maksymilian Jastrzebski | Software Engineer        |
+|           | Tor Hovland                      | Software Engineer        |
+|           | Simen Karlsen                 | Smart Grid-Enabler        |
+|           | Øystein Askeland             | Interaction Designer       |
 | Microsoft | Pedro Dias           | Sr.Technical Evangelist |
 |           | Anders Gill          | Technical Evangelist    |
 
+## Solution Overview
 
-## Customer profile
+Powel envisions a future where on-site engineers can use their natural voice as the main driver for computer-assisted support during an inspection of power facilities. An inspection of an electrical station, or line inspections using André, will free up the engineers’ hands, which gives a more fluent process than having to fill out a paper form, or plot data into a device application. Utilizing the capabilities of a wearable device, such as a mobile phone, the application will automatically understand which facility is being inspected by obtaining the user’s GPS location and provide the necessary checkpoint lists and dialogs appropriate to that facility.
 
-[Powel](http://www.powel.com/) spans Europe with a broad and sustainable customer base and a long history
-as a trusted supplier of software solutions for cities / municipalities, counties,
-the energy industry, as well as the contracting sector. Ca USD 50M revenue and
-400 employees. The company has offices across Norway as well as in Sweden,
-Denmark, Switzerland, Chile, Turkey and Poland.
+The hackfest focused on two distinct inspection targets:
 
-## Focus of the hackfest
-
-
-## Problem statement
-Powel envisions a future where on-site engineers can use their natural voice as the main driver for computer-assisted support during inspection of power facilities. 
-An inspection of an electrical station, or line inspections using **Andre**, will free up the engineers hands, which gives a more fluent process than having to fill out a paper form,
-or plot data into a device application.
-Utilizing the capabilities of a wearable device, such as a mobile phone, the application will automatically understand which facility is being inspected by 
-obtaining the users GPS location, and provide the necessary checkpoint lists and dialogs appropriate to that facility.
-
-The hackfest focused on two distinct inspection targets: 
 - Power Station inspection
 - Power Line inspection
 
-The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be 
-tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform 
-to enrich **Andre** as well as devise similar conversational applications for use in other areas.
+The goal was to be able to design two distinctly different conversation dialogs with enough functionality to be tested out in the field. Based on these dialogs, Powel would then have amassed enough experience with conversation as a Platform to enrich André as well as device similar conversational applications for use in other areas.
 
-## Architecture
+We used Xamarin Forms, Microsoft Bot Framework, LUIS and Cognitive Services to develop a bot that would allow the engineer to talk to the Xamarin Forms Android app that uses the Google Speech recognition engine to transform audio into text, where the text would then be sent to LUIS that would understand a user’s intention at any point during the conversation. Based on the detected intent and entities, the Microsoft Bot Framework would yield the appropriate response back to the client app that would read the response to the engineer, helping him stay safe by keeping him hands-free.
+
+One feature in particular that really extends the usefulness of this bot, was the integration of the Microsoft Bot Framework to the Powel backend system. We managed to successfully integrate the bot to the relevant systems that would, for instance, allow engineers to extract valuable information using natural voice like 
+
+- history of inspection at specific facilities
+- specific parts prone to constant maintenance
+- extended information about facilities
+- the quickest route to the next critical prioritized facility that needs remediation
+- provide a checklist of possible rectification methods and so on.
+
+_“Microsoft’s Bot Framework and the Cognitive Services will help us in Powel to empower our customers by making their working day simpler, safer and more efficient” – Simen Karlsen, Smart Grid-Enabler (Powel)_
+
+## Customer profile
+![Powel Logo](../images/Powel/CaaP/powel_logo_regular.png)
+
+[Powel](http://www.powel.com/) spans Europe with a broad and sustainable customer base and a long history as a trusted supplier of software solutions for cities/municipalities, counties, the energy industry, as well as the contracting sector. Powel generates around USD 50M revenue each year and was founded in Norway in 1996. Powel has grown to be an international corporation with staff numbering 460 with offices in these six countries in addition to Norway: Sweden, Denmark, Switzerland, Chile, Turkey, and Poland.
+
+Powel Business Segments:
+
+![Powel Business Segments](../images/Powel/CaaP/segments.png)
+
+## Problem statement
+
+The number one aspect that every company enforces, is the worker’s safety. Powel is no exception. There might, however, be some jobs that are more dangerous than others. Powel has some of the largest customers in Norway that maintains and develops the electrical grids. These inspections have to be done once per year for each facility. Other more in-depth technical inspections have to be done once every 10 years for all the components in the electrical grid, which is enforced by law. In order to perform an inspection, an engineer might have to climb tall masts that can create dangerous situations depending on weather and other factors. These inspections take place especially in wintertime when there is much frost on the ground that hinders the development of new grids. This forces the companies to focus on maintenance instead which is also an important job. For this reason, it would be very inconvenient to keep a cell phone or a notebook at hand when you could potentially be hanging many meters above the ground. 
+
+As a result, an engineer has to remember what to check for, what potential issues there might be if any other maintenance has ever been performed on this particular mast/station, what types of remedies that counter the issues and so on. Based on this data collected, the engineer has to travel back to the main office to hand over the information to his colleagues or to digitalize it himself. During this transit, valuable information and specific context that was gathered during the inspection could be lost. 
+
+Powel requires a solution that allows the engineers to stay hands-free while still adding value to the conversation. A chatbot that would be triggered through a simple “Hello André”, could potentially relieve the engineer of having to remember all the tasks that he is to execute during his inspection. The great thing about such a chatbot is that it could be connected to all other systems that are relevant and could provide some kind of information that the engineer needs. This was one of our goals for the hackfest – being able to provide a simple chatbot that can converse dialogues to external systems and return valuable insight that can increase efficiency during the inspection.
+
+An inspection could consist of assessing facilities where data is fed back regarding what type of issue that is presently based on a checklist, to actually fixing the issues. Common issues could be woodpeckers pecking the masts or graffiti, to more serious problems like high voltage electrical components failing.
+
+In summary, the chatbot will:
+
+- maintain security issues by staying hands-free
+- provide specific insight related to particular facilities
+- manage handover by taking notes of current inspection so that no data is lost during the inspection
+- support the engineer with other relevant information that might be significant to know about or that he might have forgotten about during the inspection
+
+## Solution and steps
+
+The whole hackfest was initiated by Pedro who introduced the team to the Microsoft Bot Framework, showing examples of a working bot, explaining features and making sure that the whole team was up to speed before we started developing. The goal of the three-day hackfest was to create a client app in Xamarin Forms for Android that could visualize the conversation that the engineer would be having using the Microsoft Bot Framework with LUIS and the cognitive services. We created a User Story in Visual Studio Team Services (VSTS) that consisted of multiple tasks. The User Story was as following:
+
+_“As a field worker, I want to be able to submit inspections that are OK to a bot so that I don't have to fill out a form for that”_
+
+We also defined Features and Tasks to make it easier to distribute work across the team. We created two repositories (one for the ASP.NET bot application, the second one for the Xamarin Forms application). We also configured Continuous Integration on the Bot Framework, so that it builds and deploys to Microsoft Azure after each commit.
+
+Below is a picture of the Kanban board:
+
+![Kanban board](../images/Powel/CaaP/kanban.png)
+
+The decision landed on Android as the visualization part since the Powel developers all had Android devices. As well as developing a working app, the aim was also to educate the Powel developers on Microsoft Bot Framework and CaaP, so that they could bring their knowledge with them back to the drawing board when developing and extending their apps for scenarios that could leverage the Microsoft Bot Framework and other features of the Microsoft Cognitive Services. The Proof of Concept (PoC) bot developed during the hackfest would be used as a foundation that would help Powel move their own bot into production after further development.
+
+A simple sketch of how the field engineer usually would inspect a power station:
+
+![Inspection sketch](../images/Powel/CaaP/sketch.jpg)
+
+The following was achieved by the end of the hackfest:
+
+- Power Station inspection
+    - Checkpoint lists and dialogs appropriate to a specific facility
+    - Selection of substations
+    - Selection of discrepancy type
+    - Registration of discrepancies with comments integrated with Powel backend
+
+The following was not implemented, but scoped for during the hackfest:
+
+- Power line inspection
+- Translation of text from Norwegian to English
+- Upload image from mobile app
+- Triggering of conversation through voice without the use of a button
+
+The current PoC chatbot allows the field engineer to execute an inspection by initiating a conversation through natural voice with the Microsoft Bot Framework, ask for its capabilities, select a substation, register discrepancy of a specific type with a comment. This fulfills the feedback loop by registration on-the-fly to the Powel backend so that the field engineer no longer has to physically be present at the offices to register the same information.
+
+**Technologies used:** 
+
+Microsoft Bot Framework Bot Builder SDK (C#), FormFlow, LUIS, Multi-channel integration (Slack, Direct Line).
+
+![Architecture](../images/Powel/CaaP/architecture.jpg)
+
+## Technical delivery
+
+### Achievements Day 1
+
+The following was worked on during day 1 of the hackfest:
+
+For Xamarin forms, we managed to initiate native services which made the mobile app listen and speak through the Google speech recognition interface. We also started to work on the chat components for the app.
+
+With LUIS, we had 10 intents described and trained with utterances. We started writing imaginary dialogs between a user and the app to get a better understanding of how the conversation would flow. We also started to experiment with LUIS entities and having intents recognize and use these entities.
+
+For the Microsoft Bot Framework, we created a bot application in the dev.framework.com space, and also created a Web API Bot framework site in Azure. We then connected these two together.
+We set up Continuous Integration (CI) in VSTS where the bot would build and deploy to Azure on every commit. We then proceeded to add LUIS integration to start working with the intents. At this stage, we had two intents implemented.
+
+The team working hard:
+
+![Team](../images/Powel/CaaP/team.jpg)
+
+### Achievements Day 2
+
+The following was worked on during day 2 of the hackfest:
+
+We finalized the Direct Connection through the use of Web Sockets (https://github.com/NVentimiglia/WebSockets.Pcl) but ended up going for HTTP instead as we couldn’t make the Portable Class Library work.
+
+We successfully connected the Bot application to the Powel backend (application called Condition Monitoring) through the use of API’s.
+
+We connected the mobile app to the bot and made it work. We also spent some time designing the Xamarin Forms app and making sure that the interface/user experience was good.
+
+Below is a low-fidelity sketch of the interface:
+
+![Low fidelity sketch](../images/Powel/CaaP/lowfidelity.jpg)
+
+We further worked on getting NuGet Packages from Powels core API’s (Condition Monitoring API) to be included in the build for the bot. We worked on some dialog flows plans for later implementation, and spent some more time on working with the intents and training LUIS to recognize them.
+
+We spent a lot of time on the PromptDialogs as we forgot to set the dialog implementation as [Serializable].
+
+Other pain points we experienced:
+
+- Some issues with the .net Framework version
+- WebApiConfig from the bot template made all parameter names in JSON; Camel cased. This was not accepted by the internal Powel API, which in return took some time to figure out.
+
+We ended the day by testing the bot outside to see how it handled background noise and whether it would be able to capture the intent of the field engineer. The location chosen was a noisy environment (highway) that could very much be an actual inspection site where a field engineer would have to inspect an overhead line or a power mast for instance.  The testing succeeded with positive results:
+
+![Noise testing](../images/Powel/CaaP/testing.jpg)
+
+### Achievements Day 3
+
+Every Friday morning, Microsoft Norway hosts a gathering for the whole subsidiary, and every week there are different sharing’s from either employees or customers, sometimes even the Microsoft leadership team. The meeting gives people an opportunity to see what’s going on in the Microsoft subsidiary, and to see all the cool stuff Microsoft is able to do in the market. The current CaaP Hackfest with Powel was no exception. Therefore, for this meeting we had Powel present what we had managed to come up with during the two days of hacking. Below is a picture of Powel presenting the bot to Microsoft internally:
+
+![Presentation](../images/Powel/CaaP/presentation.jpg)
+
+The presentation proved to be very useful as many Microsoft employees commented that they now have a real-world example they can bring out to their customer conversations.
+
+The final part of the hackfest was used on setting up build automation for the Xamarin Forms project, as well as finding possibilities for making a conversation that flows through different Dialogs.
+
+The following is the final flow of the PoC chatbot (sadly, we didn’t manage to implement text translation because of time constraints, but have included the part in the flow image below):
+
+![Flow image](../images/Powel/CaaP/flow.png)
+
+**Use case:** A field worker talks to André (the mobile app) in his natural language, the speech is transformed into text by the Google speech recognition engine and returned to the mobile app, the app then sends the text for translation and receives a fully translated text in return. The app then continues to pass the translated text to LUIS which captures the intent and entities and sends the response back to the mobile app. The mobile app sends the detected intent and entities including the field worker ID to the Microsoft Bot Framework which communicates based on a request to the Powel backend. The appropriate response is then sent back to the mobile app which translates the text into the field worker’s language and talks back to the worker.
+
+### Handling dialogs
+
+In the Microsoft Bot Framework, a dialog works as the “brains” of the chatbot.
+A dialog provides a couple of neat features that manages the state of the conversation and session management, as well as persistence that relies on an implementation of an interface called **IDialog**. This interface manages the state transition using the **IDialogContext**. These principals have been included in the way we worked with the bot during the hackfest and plays an integral part of the bot in order for it to steer a conversation using the underlying stack where it saves data to the session object that can be accessed throughout the course of the conversation.
+
+An example of this is when LUIS acknowledges the user’s intent to be happy, the bot framework will proceed to that particular method with the intent and respond with the appropriate response:
+
+   ```csharp
+        [LuisIntent("happy")]
+        public async Task Happy(IDialogContext context, LuisResult result)
+        {
+            await context.PostAsync("That's so kind of you!");
+            context.Wait(MessageReceived);
+        }
+````
+Another example is when LUIS acknowledges that the user wants to select a substation:
+
+   ```csharp
+        [LuisIntent("selectSubstation")]
+        public async Task SelectSubstation(IDialogContext context, LuisResult result)
+        {
+            AssetService assetService = new AssetService(new AssetRepository());
+            string extractedName;
+            string message = "I'm sorry, I didn't catch the name of the substation.";
+
+            if (TryExtractingSubstationName(result, out extractedName))
+            {
+                var asset = await assetService.GetByName(extractedName);
+                substationName = asset != null ? extractedName : null;
+                message = asset != null ? $"The substation {substationName} has been chosen." : $"Sorry, I didn't find a substation called '{extractedName}'.";
+            }
+
+            await context.PostAsync(message);
+            context.Wait(MessageReceived);
+        }
+````
+
+More complex dialogs were also developed where the bot framework communicates with the appropriate Powel backend, and lists the possible discrepancy types that the field engineer can choose from:
+
+   ```csharp
+        [LuisIntent("getDiscrepancyType")]
+        public async Task SelectControlPoints(IDialogContext context, LuisResult result)
+        {
+            if (String.IsNullOrEmpty(substationName))
+            {
+                await context.PostAsync($"You need to tell what substation you want to select.");
+                context.Wait(MessageReceived);
+            }
+            else
+            {
+                
+                DiscrepancyTypeService discrepancyService = new DiscrepancyTypeService(new DiscrepancyTypeRepository(new InspectionRepository(new AssetRepository()), new AssetRepository()));
+                AssetService assetService = new AssetService(new AssetRepository());
+                InspectionService inspectionService = new InspectionService(new InspectionRepository(new AssetRepository()));
+                var asset = await assetService.GetByName(substationName);
+                var inspection = await inspectionService.GetNotPerformedByAssetId(asset.ObjectId);
+                var discrepancyTypes = await discrepancyService.Get(asset.ObjectId, inspection.Id);
+       
+                await context.PostAsync($"You have your discrepancy types here:\n {JsonConvert.SerializeObject(discrepancyTypes)}");
+                context.Wait(MessageReceived);
+            }
+        }
+````
+
+#### Prompt dialog
+
+The Microsoft Bot Framework comes with a number of built-in prompts that can be used to collect input from a user. This type of a prompt was used throughout the bot project, such as when André asks the field engineer if he is satisfied with the inspection and wants to finish. This is again based on the recognition of a LUIS intent of **assetAllGood**:
+
+   ```csharp
+         [LuisIntent("assetAllGood")]
+        public async Task AssetAllGood(IDialogContext context, LuisResult result)
+        {
+            if (String.IsNullOrEmpty(substationName))
+            {
+                await context.PostAsync($"You need to tell what substation you want to select.");
+                context.Wait(MessageReceived);
+            }
+            else
+            {
+                PromptDialog.Confirm(context, AfterConfirmAsync, "Are you sure that you want to finish this inspection?");
+                await Task.FromResult<Object>(null);
+            }
+        }
+````
+In the scenario above, the field engineer is asked to confirm with either **Yes** or **No** (by either tapping the appropriate button or using natural voice to respond), but there are many other types of data collection inputs that can be chosen:
+
+| Prompt Type   | Description               |
+| -------   | -------------------- |
+| Prompts.text     | Asks the user to enter a string of text.          | 
+| Prompts.confirm     | Asks the user to confirm an action.          | 
+| Prompts.number     | Asks the user to enter a number.          | 
+| Prompts.time     | Asks the user for a time or date.         | 
+| Prompts.choice     | Asks the user to choose from a list of choices.         | 
+| Prompts.attachment     | sks the user to upload a picture or video.         | 
+
+#### FormFlow
+As we have seen, dialogs work as a powerful mechanism to guide a conversation, but these can get pretty comprehensive when there are many small pieces to the puzzle; like ordering a sandwich for instance. To simplify a guided conversation, the bot framework offers a much easier way of building a dialog called **FormFlow**. A FormFlow dialog guides the user through filling in the form while providing help and guidance along the way. The form dialog was used when the field engineer has to submit a discrepancy where he has to fill in the remaining fields which include the type of discrepancy and the comment.
 
 
-### Thing 1
-details details details
+   ```csharp
+[Serializable]
+    public class DiscrepancyFormDialogBuilder
+    {
+        public string DiscrepancyType;
+        public string Comment;
 
-### Thing 2
-details details details
+        public static IForm<DiscrepancyFormDialogBuilder> BuildForm()
+        {
+            return new FormBuilder<DiscrepancyFormDialogBuilder>()
+                .AddRemainingFields()
+                .Build();
+        }
 
-## Future plans, going forward
+        public static IFormDialog<DiscrepancyFormDialogBuilder> Build(FormOptions options = FormOptions.PromptInStart)
+        {
+            // Generated a new FormDialog<T> based on IForm<BasicForm>
+            return FormDialog.FromForm(BuildForm, options);
+        }
+    };
 
-### Thing 1
-details details details
+````
 
-### Thing 2
-details details details
+### Connector
+
+The Bot Framework Connector service is a component which provides a single API for the bot to communicate across multiple client services such as Skype, Email, Slack. Since we were already using Slack for communication throughout the hackfest, we decided to set up the integration with Slack in order to be able to talk to the bot in an efficient way.
+
+![Skack connector](../images/Powel/CaaP/slack.png)
+
+We managed to set up the slack integration by registering the bot in the dev.botframework space and choosing the connector type without the need of any coding.
+
+### Bot communication
+
+The Direct Line API is a simple REST API for connecting directly to the bot. The main purpose of this API is to let developers connect custom agents to the bot in order to converse conversations. As mentioned during earlier, we initially set out to implement the connectivity through web sockets in the mobile app developed in Xamarin Forms but decided to go for HTTP as we couldn’t make the Portable Class Library work. The following code shows a simple send-task:
+
+   ```csharp
+        public async Task Send<T>(T item)
+        {
+            var client = new HttpClient();
+            client.DefaultRequestHeaders.Accept.Clear();
+            client.DefaultRequestHeaders.Accept.Add(new MediaTypeWithQualityHeaderValue("application/json"));
+            client.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", _conversationStartedResponse.Token);
+            var content = JsonConvert.SerializeObject(item);
+
+            var response = await client.PostAsync($"https://directline.botframework.com/api/conversations/{_conversationStartedResponse.ConversationId}/messages", new StringContent(content, Encoding.UTF8, "application/json"));
+        }
+````
+
+### Other measures implemented
+
+In the Microsoft Bot framework, you have to directly provide the BotId, MicrosoftAppId, and MicrosoftAppPassword in the Web.config-file in order to set the appropriate app settings. Because of security issues, we did not want to do this. In order to provide the settings in a more secure way, we got the settings values from the CloudConfigurationManager or by a local JSON file that has the bot settings.  
+
+We wrote the following code for the settings reader:
+
+   ```csharp
+public string this[string index]
+        {
+            get
+            {
+                var settingValue = CloudConfigurationManager.GetSetting(index);
+
+                if (string.IsNullOrEmpty(settingValue))
+                    settingValue = GetByLocalJsonFile(index);
+
+                return settingValue;
+            }
+        }
+
+        private string GetByLocalJsonFile(string index)
+        {
+            var path = Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.UserProfile), "FieldWorkerBotSettings.Json");
+            if (!File.Exists(path))
+                return string.Empty;
+
+            var fileContent = File.ReadAllText(path);
+            if (string.IsNullOrEmpty(fileContent))
+                return string.Empty;
+
+            var json = JObject.Parse(fileContent);
+
+            if (!json.HasValues)
+                return string.Empty;
+
+            return json[index].Value<string>();
+        }
+    }
+
+````
+
+This allows us to create a new LuisModelAttribute where we pass the appId and the appKey in the message controller.
+
+   ```csharp
+        private static readonly LuisService _service;
+
+        static MessagesController()
+        {
+            var settings = new SettingsReader();
+            var appId = settings["LUIS:AppId"];
+            var appKey = settings["LUIS:AppKey"];
+            var model = new LuisModelAttribute(appId, appKey);
+            _service = new LuisService(model);
+        }
+````
+
+As there is too much code to display and explain in this report, please find all the source code for the hackfest in the following [GitHub repository](http://github.com). 
+
+### Agent UI
+
+The following gif shows the client mobile app on the left developed in Xamarin Forms, and the Powel Condition Monitoring app on the right displaying the status of a power station. 
+
+![Agent UI](../images/Powel/CaaP/poweldemogif.gif)
 
 ## Conclusion
-details details details
 
-## Resources
-details details details
+The 3-day hackfest in collaboration with Powel was an intensive effort to create a solution on top of the newest technologies that could increase efficiency and add value for the field engineers assessing the electrical power grid in Norway. The hackfest situated in Microsoft offices in Norway yielded much excitement not only within the DX Team but also throughout other segments in the subsidiary. 
+
+The concept of having all the information within the Powel backend accessible through natural speech within an app, not only increases the efficiency of the field engineer but also empowers the engineer to make better decisions based on knowledge he can now extract through the app. Being able to register discrepancies on-the-fly, allows the engineers to stay paperless while conducting inspections so that he doesn’t have to return to the office to digitalize the findings afterward. This feature itself decreases the potential loss of information that might occur when the engineer is in transit from finishing the inspection, to actually digitalizing the findings.
+
+### General lessons
+
+Learning were done throughout the whole hackfest, not only for Powel but also for the DX Team in Microsoft. The learnings included:
+
+- Many new technologies like:
+  - Microsoft Bot Framework
+  - LUIS
+  - Xamarin Forms
+- How to integrate the Microsoft Bot Framework with different channels like Slack etc.
+- Xamarin Forms Native Services (platform specific services like speech)
+- Visual Studio Team Services, how to setup CI and the increased efficiency an iteration board can bring for collaboration
+- How to write good commit messages
+- Productivity tips (including shortcuts and unknown features in Visual Studio 2017)
+
+It turned out that we did not manage to include all the features that we scoped for during the 3-day hackfest. The scoped features that were left out was:
+
+- Text translation
+- Upload image from client app
+- Triggering of “André” for voice activation based on natural voice instead of a button 
+
+This is something that Powel will continue to integrate into the next development phase of the chatbot.
+
+### Going forward
+
+The results of the hackfest were brilliant and it is mesmerizing to think that the developers from Powel went from knowing nothing about the Microsoft Bot Framework – to actually successfully build an integrated chatbot that could converse conversations across multiple systems and provide much-needed insight for the field engineers. Powel is dedicated to continuing the development of the chatbot the next few months to extend the current capabilities of the chatbot to include analytics and historical view of specific parts before going live, but to also extend the concept to other areas and application domains of Powel than just the power business segment. 
+
+_“The cool part about this hackfest is that we managed to build something that actually works and could be put into production in no time. With LUIS and the Microsoft Bot Framework, we are now able to give the field worker the support he needs when he needs it and without the use of hands. This is a totally new user experience, heavily influenced by Microsoft – an experience we can bring into our customer conversations across the domains within Powel.” – Øystein Askeland, Interaction Designer (Powel)_
+
+Overall, the hackfest turned out to be a success for all parties involved and many valuable lessons were learned.
+
+## Additional resources
+
+All source code for the hackfest can be found in the following GitHub repository:
+
+[Link to GitHub repository](http://github.com)
