Add GitHub code repo

--- a/_posts/2017-03-15-Powel.md
+++ b/_posts/2017-03-15-Powel.md
@@ -402,7 +402,7 @@ This allows us to create a new LuisModelAttribute where we pass the appId and th
         }
 ````
 
-As there is too much code to display and explain in this report, please find all the source code for the hackfest in the following [GitHub repository](http://github.com). 
+As there is too much code to display and explain in this report, please find all the source code for the hackfest in the following [GitHub repository](https://github.com/readyforchaos/Powel-power-station-inspection-bot). 
 
 ### Agent UI
 
@@ -450,4 +450,4 @@ Overall, the hackfest turned out to be a success for all parties involved and ma
 
 All source code for the hackfest can be found in the following GitHub repository:
 
-[Link to GitHub repository](http://github.com)
+[Link to GitHub repository](https://github.com/readyforchaos/Powel-power-station-inspection-bot)
