Small mistake in people names involved in project (#274)
* Tomasz Kopacz, Cybercom case study

* Tomasz Kopacz, Cybercom case study, updated after corp review

* Updated 2017-03-13-Cybercom.md

Edit in progress

* Updated 2017-03-13-Cybercom.md

Edit in progress

* Updated 2017-03-13-Cybercom.md

Edit in progress

* Updated 2017-03-13-Cybercom.md

Edit complete

* Updated 2017-03-13-Cybercom.md

Final tweaks

* As requested from partner:

Change from Michal Idczak to Piotr Artychowski
And add Mariusz Ragus

Details:

Hej Tomek,

wkradł się błąd na liście zaangażowanych osób, czy możesz zamienić Michał Idczak na Piotr Artychowski i dopisać jeszcze do tego Mariusz Ragus?

Dzięki i pozdrawiam.

--- a/_posts/2017-03-13-Cybercom.md
+++ b/_posts/2017-03-13-Cybercom.md
@@ -20,12 +20,13 @@ The Smart Helmet project involved the following individuals:
 * Cybercom
   * Rafał Rudnicki
   * Andrzej Nielipiński
-  * Michal Idczak
+  * Piotr Artychowski
   * Adam Makowski
   * Michal Walędziak
   * Marcin Goluch
   * Maciej Bożyk
   * Piotr Kuszewski
+  * Mariusz Ragus
 * Microsoft
   * Tomasz Kopacz
 
